--- a/Swift Assess 1/Base.lproj/Main.storyboard
+++ b/Swift Assess 1/Base.lproj/Main.storyboard
@@ -32,13 +32,18 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Zm-ZR-4kf">
+                                <state key="normal" title="Counting Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Bgq-yJ-Ff9" firstAttribute="top" secondItem="qgR-lm-iwA" secondAttribute="bottom" constant="50" id="8ey-nm-kgt"/>
                             <constraint firstItem="Bgq-yJ-Ff9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="THQ-0F-hcp"/>
                             <constraint firstItem="qgR-lm-iwA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZrA-PN-Qpr"/>
+                            <constraint firstItem="8Zm-ZR-4kf" firstAttribute="top" secondItem="Bgq-yJ-Ff9" secondAttribute="bottom" constant="100" id="dvT-mG-QNP"/>
                             <constraint firstItem="qgR-lm-iwA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="80" id="hsY-Ho-w0Q"/>
+                            <constraint firstItem="8Zm-ZR-4kf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ild-RR-fne"/>
                         </constraints>
                     </view>
                     <connections>
